Started building navbar element.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,25 @@
 </head>
 <body>
 
+    <nav class="navBar">
+        <div class="brand">
+            Code <span>sensei</span>
+        </div>
+        <ul class="navBarList">
+            <li><a class="navLink" href="#">Home</a></li>
+            <li><a class="navLink" href="#">Products</a></li>
+            <li><a class="navLink" href="#">About Us</a></li>
+            <li><a class="navLink" href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div class="sectionLight">
+        <div class="row">
+            <div class="col-12">
+
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
