--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 
     <nav class="navBar">
         <div class="brand">
-            Code <span>sensei</span>
+            Code<span class="sensei">sensei</span>
         </div>
         <ul class="navBarList">
             <li><a class="navLink" href="#">Home</a></li>
             <li><a class="navLink" href="#">Products</a></li>
             <li><a class="navLink" href="#">About Us</a></li>
             <li><a class="navLink" href="#">Contact</a></li>
+            <li class="dropdownLink"><a href="#">&#9776;</a> </li>
         </ul>
     </nav>
 
