--- a/index.html
+++ b/index.html
@@ -11,22 +11,17 @@
         <div class="brand">
             Code<span class="sensei">sensei</span>
         </div>
-        <ul class="navBarList">
+        <ul class="topnav" id="navBarToggle">
             <li><a class="navLink" href="#">Home</a></li>
             <li><a class="navLink" href="#">Products</a></li>
             <li><a class="navLink" href="#">About Us</a></li>
             <li><a class="navLink" href="#">Contact</a></li>
-            <li class="dropdownLink"><a href="#">&#9776;</a> </li>
+            <li class="dropdownLink"><a onclick="toggleDropdown()" href="javascript:void(0);">&#9776;</a> </li>
         </ul>
     </nav>
 
-    <div class="sectionLight">
-        <div class="row">
-            <div class="col-12">
 
-            </div>
-        </div>
-    </div>
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
