started work on header ele.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>My Landing Page</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/styles.css">
+	<title>My Landing Page</title>
 </head>
+
 <body>
 
-    <nav class="navBar">
-        <div class="brand">
-            Code<span class="sensei">sensei</span>
-        </div>
-        <ul class="topnav" id="navBarToggle">
-            <li><a class="navLink" href="#">Home</a></li>
-            <li><a class="navLink" href="#">Products</a></li>
-            <li><a class="navLink" href="#">About Us</a></li>
-            <li><a class="navLink" href="#">Contact</a></li>
-            <li class="dropdownLink"><a onclick="toggleDropdown()" href="javascript:void(0);">&#9776;</a> </li>
-        </ul>
-    </nav>
+<!-- navBar -->
 
+	<nav class="navBar">
+		<div class="brand">
+			Code<span class="sensei">sensei</span>
+		</div>
+		<ul class="topnav" id="navBarToggle">
+			<li><a class="navLink" href="#">Home</a></li>
+			<li><a class="navLink" href="#">Products</a></li>
+			<li><a class="navLink" href="#">About Us</a></li>
+			<li><a class="navLink" href="#">Contact</a></li>
+			<li class="dropdownLink"><a onclick="toggleDropdown()" href="javascript:void(0);">&#9776;</a> </li>
+		</ul>
+	</nav>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="main.js"></script>
+<!-- header -->
+
+	<header>
+		<div class="headshotWrapper">
+			<img class="img-fluid" src="assets/2016-04-25 Asia Beard After.JPG" alt="profile image">
+			<h1>Zoard Mano Csoltay</h1>
+		</div>
+	</header>
+
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="main.js"></script>
 </body>
+
 </html>
