header done, section begin.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
 
 	<header>
 		<div class="headshotWrapper">
-			<img class="img-fluid" src="assets/2016-04-25 Asia Beard After.JPG" alt="profile image">
+			<img class="headshot" src="assets/2016-04-25 Asia Beard After.JPG" alt="profile image">
 			<h1>Zoard Mano Csoltay</h1>
 		</div>
 	</header>
+
+	<section>
+
+	</section>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="main.js"></script>
