first section done.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<!-- navBar -->
+	<!-- navBar -->
 
 	<nav class="navBar">
 		<div class="brand">
@@ -24,7 +24,7 @@
 		</ul>
 	</nav>
 
-<!-- header -->
+	<!-- header -->
 
 	<header>
 		<div class="headshotWrapper">
@@ -33,7 +33,58 @@
 		</div>
 	</header>
 
-	<section>
+	<section class="services">
+		<div class="container">
+			<div class="mediaObject">
+				<div class="iconWrapperLeft">
+					<img class="icon" src="assets/graph_lines.svg" alt="graph chart">
+				</div>
+
+				<div class="blurbWrapperRight">
+					<h3 class="blurbHeader">Coder at the ready</h3>
+					<div class="blurbInfo">
+						In interdum tincidunt blandit. Cras a sem tempus, faucibus risus vitae, porttitor justo. Ut consectetur et purus interdum cursus. Donec non augue venenatis, venenatis nibh ut, luctus arcu. Proin pretium tempor turpis, id
+						tincidunt tellus. Vivamus volutpat sit amet odio ut lobortis. Praesent lectus turpis, tincidunt sed dolor eu, mattis viverra tellus. Nulla feugiat orci non enim laoreet accumsan non id ex. Sed consectetur sed leo et pulvinar.
+						Praesent sit amet nibh ultricies, vulputate est vitae, vehicula velit.
+					</div>
+				</div>
+			</div>
+
+			<div class="mediaObject">
+				<div class="iconWrapperRight">
+					<img class="icon" src="assets/pie_chart.svg" alt="pie_chart">
+				</div>
+
+				<div class="blurbWrapperLeft">
+					<h3 class="blurbHeader">making graphs look tight</h3>
+					<div class="blurbInfo">
+						It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+					</div>
+				</div>
+			</div>
+
+			<div class="mediaObject">
+				<div class="iconWrapperLeft">
+					<img class="icon" src="assets/assistant_icon.svg" alt="assistant_icon">
+				</div>
+
+				<div class="blurbWrapperRight">
+					<h3 class="blurbHeader">Ongoing Support</h3>
+					<div class="blurbInfo">
+						My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?
+					</div>
+				</div>
+			</div>
+
+			<div class="quoteBtnWrapper">
+				<button class="quoteBtn" type="button" name="button"> Get a quote</button>
+			</div>
+		</div>
+
+
+	</section>
+
+	<section class="portfolio">
 
 	</section>
 
