--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 				<div class="blurbWrapperLeft">
 					<h3 class="blurbHeader">making graphs look tight</h3>
 					<div class="blurbInfo">
-						It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+						It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+						opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
+						uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
 					</div>
 				</div>
 			</div>
@@ -71,7 +73,9 @@
 				<div class="blurbWrapperRight">
 					<h3 class="blurbHeader">Ongoing Support</h3>
 					<div class="blurbInfo">
-						My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?
+						My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the
+						kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first
+						motherfucker to get shot. You understand?
 					</div>
 				</div>
 			</div>
@@ -85,6 +89,89 @@
 	</section>
 
 	<section class="portfolio">
+		<div class="container">
+			<div class="sectionHeader">
+				<h1 class="header">My portfolio</h1>
+			</div>
+			<div class="portfolioWrapper">
+				<div class="portfolioObject">
+					<div class="portfolioBox"></div>
+
+					<h4 class="portfolioHeader">Project</h4>
+					<div class="portfolioText">
+						My money's in that office, right?
+					</div>
+				</div>
+
+				<div class="portfolioObject">
+					<div class="portfolioBox"></div>
+
+					<h4 class="portfolioHeader">Project</h4>
+					<div class="portfolioText">
+						My money's in that office, right?
+					</div>
+				</div>
+
+				<div class="portfolioObject">
+					<div class="portfolioBox"></div>
+
+					<h4 class="portfolioHeader">Project</h4>
+					<div class="portfolioText">
+						My money's in that office, right?
+					</div>
+				</div>
+
+				<div class="portfolioObject">
+					<div class="portfolioBox"></div>
+
+					<h4 class="portfolioHeader">Project</h4>
+					<div class="portfolioText">
+						My money's in that office, right?
+					</div>
+				</div>
+
+				<div class="portfolioObject">
+					<div class="portfolioBox"></div>
+
+					<h4 class="portfolioHeader">Project</h4>
+					<div class="portfolioText">
+						My money's in that office, right?
+					</div>
+				</div>
+
+				<div class="portfolioObject">
+					<div class="portfolioBox"></div>
+
+					<h4 class="portfolioHeader">Project</h4>
+					<div class="portfolioText">
+						My money's in that office, right?
+					</div>
+				</div>
+
+				<div class="portfolioObject">
+					<div class="portfolioBox"></div>
+
+					<h4 class="portfolioHeader">Project</h4>
+					<div class="portfolioText">
+						My money's in that office, right?
+					</div>
+				</div>
+
+				<div class="portfolioObject">
+					<div class="portfolioBox"></div>
+
+					<h4 class="portfolioHeader">Project</h4>
+					<div class="portfolioText">
+						My money's in that office, right?
+					</div>
+				</div>
+
+
+			</div>
+		</div>
+	</section>
+
+	<section class="contactContainer">
 
 	</section>
 
