--- a/index.html
+++ b/index.html
@@ -172,7 +172,29 @@
 	</section>
 
 	<section class="contactContainer">
+		<div class="container">
+			<div class="sectionHeader">
+				<h1 class="headerTwo">Give me a holla</h1>
+			</div>
+			<form class="" action="">
+				<label for="name">* name</label>
+				<div class="formGroup">
+					<input class="formControl" type="text" id="name" placeholder="Ford Prefect">
+				</div>
+				<label for="email">* email</label>
+				<div class="formGroup">
+					<input class="formControl" type="email" id="email" placeholder="email@email.email">
+				</div>
 
+				<label for="message">* message</label>
+				<div class="formGroup">
+					<textarea class="formControl" id="message" rows="6"></textarea>
+				</div>
+				<div class="submitBtnWrapper">
+					<button class="quoteBtn">Submit</button>
+				</div>
+			</form>
+		</div>
 	</section>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
